addmore button alignment corrected in displays with less than 330px

--- a/src/Client-side/menu/dishes/dishes.css
+++ b/src/Client-side/menu/dishes/dishes.css
@@ -71,6 +71,7 @@
 
   height: 31px;
   width: 68.2px;
+  flex-shrink: 0;
   background: none;
   border: 4px solid #31d82b;
   border-radius: 23px;
@@ -97,5 +98,15 @@
 }
 .sing{
   color: #31d82b;
+  font-style: oblique;
   font-weight: bold
 }
+
+@media screen and (max-width: 330px) {
+  .addplus{
+    flex-shrink: 1;
+  }
+  .inc{
+    margin-left: 21px;
+  }
+  }
